--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -22,6 +22,58 @@
   .imagen{
     width: 30px;
   }
-  .logotipo{
-    width: 40px;
+  .logo{
+   width: 100px;
+   height: 40px;
+   margin-left: 25px;
   }
+  .icono{
+    width: 100px;
+    height: 40px;
+  }
+.navbar-expand-md .navbar-collapse {
+    display: flex !important;
+    flex-basis: auto;
+    color: black;
+    background-color: #ffffff;
+    width: 1349px;
+    height: 64px;
+}
+.busqueda{
+  border-radius: 13px;
+  background-color: #f2f4f7;
+  border-width: inherit;
+}
+.boton-busqueda{
+  background-color: #b9b7b7;
+  border-color: #b9b7b7;
+  border-radius: 10px;
+}
+.barra-busqueda{
+  margin-bottom: -15px;
+  margin-right: 18px;
+}
+
+.fa-user:before {
+  content: "\f007";
+  width: 100%;
+  height: 23px;
+  font-size: 25px;
+  color: #b9b7b7;
+}
+
+.fa-comment-alt:before {
+  content: "\f27a";
+  font-size: 25px;
+  color: #b9b7b7;
+}
+.fa-bell:before {
+  content: "\f0f3";
+  font-size: 25px;
+  color: #b9b7b7;
+}
+.titulo_tabla{
+  text-align: left;
+  font-size: 25px;
+  color: #000000;
+}
