--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -45,6 +45,9 @@
   background-color: #f2f4f7;
   border-width: inherit;
 }
+.busqueda:hover{
+  border-color: #f2f4f7;
+}
 .boton-busqueda{
   background-color: #b9b7b7;
   border-color: #b9b7b7;
@@ -77,5 +80,18 @@
   content: "\f00d";
   color: #b9b7b7;
   margin-left: -18px;
-
+}
+.Search{
+    width:480px;
+    height:49px;
+    border:3px solid #b9b7b7;
+    padding-left:48px;
+    padding-top:1px;
+    font-size:22px;color:#b9b7b7;
+    background-repeat:no-repeat;
+    background-position:center;outline:0;
+}
+.Search::-webkit-search-cancel-button{
+      position:relative;
+      right:20px;    
 }
